[package]
name = "rev2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
reqwest = "0.11.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
rand = "0.8.5"

